--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<nav class="nav">
 			<ul class="navlist">
 				<li class="navabout">
-					<a href="#about" class="navlink">About</a>
+					<a href="about.html" class="navlink">About</a>
 				</li>
 				<li class="navwork">
-					<a href="#work" class="navlink">My Work</a>
+					<a href="work.html" class="navlink">My Work</a>
 				</li>
 				<li class="navcontact">
-					<a href="#contact" class="navlink">Contact Me</a>
+					<a href="contact.html" class="navlink">Contact Me</a>
 				</li>
 			</ul>
 		</nav>
