--- a/about.html
+++ b/about.html
@@ -15,19 +15,43 @@
 		<div class="head">
 			<nav class="nav">
 			<ul class="navlist">
-				<li class="navabout">
+				<li class="navli">
 					<a href="index.html" class="navlink">Home</a>
 				</li>
-				<li class="navwork">
+				<li class="navli">
 					<a href="work.html" class="navlink">My Work</a>
 				</li>
-				<li class="navcontact">
+				<li class="navli">
 					<a href="contact.html" class="navlink">Contact Me</a>
 				</li>
 			</ul>
 		</nav>
 		</div>
 	</header>
+
+  <section id="about">
+  	<h1 class="break">About</h1>
+  <div class="container">
+
+  	<div class="row">
+  		<div class="col-sm-6">
+  			<p>I like cats, here is a picture of a cat:</p>
+  			<img src="cute-cat.jpg" alt="damn that's a cute cat">
+  		</div>
+
+  		<div class="col-sm-6">
+  			<p>I also like dogs, here is a picture of a dog:</p>
+  			<img src="pupper.jpg" alt="damn that's a cute pupper">
+  		</div>
+
+  	</div>
+  </div>
+  </section>
+
+  <footer>
+  	<p class="name">Website by Romano Agostini™</p>
+  	</body>
+  </footer>
 
 </body>
 
