--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,36 @@
 		<div class="head">
 			<nav class="nav">
 			<ul class="navlist">
-				<li class="navabout">
+				<li class="navli">
 					<a href="index.html" class="navlink">Home</a>
 				</li>
-				<li class="navwork">
+				<li class="navli">
 					<a href="about.html" class="navlink">About</a>
 				</li>
-				<li class="navcontact">
+				<li class="navli">
 					<a href="work.html" class="navlink">My Work</a>
 				</li>
 			</ul>
 		</nav>
 		</div>
 	</header>
+
+  <form>
+
+  </form>
+
+  <section id="contact">
+    <h1 class="break">Contact Me:</h1>
+    <ul>
+      <li>email: lolno@hotmail.com</li>
+      <li>phone: 1234567890</li>
+    </ul>
+  </section>
+
+  <footer>
+  	<p class="name">Website by Romano Agostini™</p>
+  	</body>
+  </footer>
 
 </body>
 
