--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<div class="head">
 			<nav class="nav">
 			<ul class="navlist">
-				<li class="navabout">
+				<li class="navli">
 					<a href="about.html" class="navlink">About</a>
 				</li>
-				<li class="navwork">
+				<li class="navli">
 					<a href="work.html" class="navlink">My Work</a>
 				</li>
-				<li class="navcontact">
+				<li class="navli">
 					<a href="contact.html" class="navlink">Contact Me</a>
 				</li>
 			</ul>
@@ -29,45 +29,12 @@
 		</div>
 	</header>
 
-
 <h1>Romano Agostini</h1>
 <h2>Engineer</h2>
 <h3>HTML, CSS, Javascript, Python, PHP, Java</h3>
 
-<section id="about">
-	<h1 class="break">About</h1>
-<div class="container">
-
-	<div class="row">
-		<div class="col-sm-6">
-			<p>I like cats, here is a picture of a cat:</p>
-			<img src="cute-cat.jpg" alt="damn that's a cute cat">
-		</div>
-
-		<div class="col-sm-6">
-			<p>I also like dogs, here is a picture of a dog:</p>
-			<img src="pupper.jpg" alt="damn that's a cute pupper">
-		</div>
-
-	</div>
-</div>
-</section>
-
-	<section id="work">
-		<h1 class="break">Work</h1>
-		<p>Download my CV here:</p>
-		<form method="get" action="cute-cat.jpg">
-			<button name="getCV">Download</button>
-		</form>
-	</section>
-
-	<section id="contact">
-		<h1 class="break">Contact Me:</h1>
-		<ul>
-			<li>email: lolno@hotmail.com</li>
-			<li>phone: 1234567890</li>
-		</ul>
-	</section>
+<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <footer>
 	<p class="name">Website by Romano Agostini™</p>
