--- a/work.html
+++ b/work.html
@@ -15,19 +15,32 @@
 		<div class="head">
 			<nav class="nav">
 			<ul class="navlist">
-				<li class="navabout">
+				<li class="navli">
 					<a href="index.html" class="navlink">Home</a>
 				</li>
-				<li class="navwork">
+				<li class="navli">
 					<a href="about.html" class="navlink">About</a>
 				</li>
-				<li class="navcontact">
+				<li class="navli">
 					<a href="contact.html" class="navlink">Contact Me</a>
 				</li>
 			</ul>
 		</nav>
 		</div>
 	</header>
+
+    <h1 class="break">Work</h1>
+    <p class="lorem">Download my CV here:</p>
+    <form method="get" action="cute-cat.jpg">
+      <button name="getCV">Download</button>
+    </form>
+
+  <p class="lorem">I have written a great many programs perimarily in Python, but I dabble in other languages, such as Javascript, HTML, CSS, etc. I even wrote this website myself!</p>
+
+  <footer>
+  	<p class="name">Website by Romano Agostini™</p>
+  	</body>
+  </footer>
 
 </body>
 
