--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,21 @@
 		</div>
 	</header>
 
-  <form>
+  <h1 class="break">Contact Me:</h1>
+
+  <form  action="mailto:romano@hotmail.com.hk" method="post" enctype="text/plain">
+    <p class="contactform">Enter your details below if you want me to get in contact:<p>
+      <input class="contactform" type="text" name="namefield" value="Name"><br>
+      <input class="contactform" type="text" name="emailfield" value="Email"><br>
+      <input class="contactform" type="text" name="messagefield" value="Message" size="50"><br><br>
+      <input class="contactform" type="submit" value="Submit">
+      <input type="reset" value="Reset"><br>
 
   </form>
 
-  <section id="contact">
-    <h1 class="break">Contact Me:</h1>
-    <ul>
-      <li>email: lolno@hotmail.com</li>
-      <li>phone: 1234567890</li>
-    </ul>
-  </section>
+  <br>
+  <p>email: lolno@hotmail.com</p>
+  <p>phone: 1234567890</p>
 
   <footer>
   	<p class="name">Website by Romano Agostini™</p>
