--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
 		<title>My Portfolio</title>
 	</head>
 
@@ -29,24 +30,22 @@
 		</div>
 	</header>
 
-  <section id="about">
-  	<h1 class="break">About</h1>
+  <h1 class="break">About</h1>
   <div class="container">
 
   	<div class="row">
   		<div class="col-sm-6">
   			<p>I like cats, here is a picture of a cat:</p>
-  			<img src="cute-cat.jpg" alt="damn that's a cute cat">
+  			<img class="aboutimg" src="cute-cat.jpg" alt="damn that's a cute cat">
   		</div>
 
   		<div class="col-sm-6">
   			<p>I also like dogs, here is a picture of a dog:</p>
-  			<img src="pupper.jpg" alt="damn that's a cute pupper">
+  			<img class="aboutimg" src="pupper.jpg" alt="damn that's a cute pupper">
   		</div>
 
   	</div>
   </div>
-  </section>
 
   <footer>
   	<p class="name">Website by Romano Agostini™</p>
