--- a/work.html
+++ b/work.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
 		<title>My Portfolio</title>
 	</head>
 
@@ -32,7 +33,7 @@
     <h1 class="break">Work</h1>
     <p class="lorem">Download my CV here:</p>
     <form method="get" action="cute-cat.jpg">
-      <button name="getCV">Download</button>
+      <button class="lorem">Download</button>
     </form>
 
   <p class="lorem">I have written a great many programs perimarily in Python, but I dabble in other languages, such as Javascript, HTML, CSS, etc. I even wrote this website myself!</p>
