--- a/work.html
+++ b/work.html
@@ -12,6 +12,9 @@
 
 <body>
 
+<div id="container">
+
+<div id="header>"
 	<header>
 		<div class="head">
 			<nav class="nav">
@@ -29,19 +32,29 @@
 		</nav>
 		</div>
 	</header>
+</div>
 
-    <h1 class="break">Work</h1>
-    <p class="lorem">Download my CV here:</p>
-    <form method="get" action="cute-cat.jpg">
-      <button class="lorem">Download</button>
-    </form>
+<div id="body">
 
+  <h1>Work</h1>
   <p class="lorem">I have written a great many programs perimarily in Python, but I dabble in other languages, such as Javascript, HTML, CSS, etc. I even wrote this website myself!</p>
+  <img src="source.png" class="exampleimg"><br>
+  <p class="lorem">Download my CV here:</p>
+  <form method="get" action="cute-cat.jpg">
+    <button style="margin-left:21%;">Download</button>
+  </form>
+
+</div>
+
+<div id="footer">
 
   <footer>
   	<p class="name">Website by Romano Agostini™</p>
   	</body>
   </footer>
+
+</div>
+</div>
 
 </body>
 
