--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
 
 <body>
 
+<div id="container">
+
+<div id="head">
 	<header>
 		<div class="head">
 			<nav class="nav">
@@ -29,27 +32,34 @@
 		</nav>
 		</div>
 	</header>
+</div>
 
-  <h1 class="break">Contact Me:</h1>
+<div id="body">
+  <h1>Contact Me:</h1>
 
   <form  action="mailto:romano@hotmail.com.hk" method="post" enctype="text/plain">
     <p class="contactform">Enter your details below if you want me to get in contact:<p>
       <input class="contactform" type="text" name="namefield" value="Name"><br>
       <input class="contactform" type="text" name="emailfield" value="Email"><br>
-      <input class="contactform" type="text" name="messagefield" value="Message" size="50"><br><br>
+      <input class="contactform" type="text" name="messagefield" value="Message" size="50"><br>
       <input class="contactform" type="submit" value="Submit">
-      <input type="reset" value="Reset"><br>
+      <input class="contactform" type="reset" value="Reset"><br>
 
   </form>
 
   <br>
   <p>email: lolno@hotmail.com</p>
   <p>phone: 1234567890</p>
+</div>
 
+<div id = "footer">
   <footer>
   	<p class="name">Website by Romano Agostini™</p>
   	</body>
   </footer>
+</div>
+
+</div>
 
 </body>
 
