--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+<div id="container">
+
+<div id="header">
 	<header>
 		<div class="head">
 			<nav class="nav">
@@ -29,17 +32,24 @@
 		</nav>
 		</div>
 	</header>
+</div>
 
-<h1>Romano Agostini</h1>
-<h2>Engineer</h2>
-<h3>HTML, CSS, Javascript, Python, PHP, Java</h3>
+<div id="body">
+	<h1>Romano Agostini</h1>
+	<h2>Engineer</h2>
+	<h3>HTML, CSS, Javascript, Python, PHP, Java</h3>
+	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
 
-<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div id="footer">
+	<footer>
+		<p class="name">Website by Romano Agostini™</p>
+	</footer>
+</div>
 
-<footer>
-	<p class="name">Website by Romano Agostini™</p>
-	</body>
-</footer>
+</div>
+
+</body>
 
 </html>
