--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@
 				<li class="navli">
 					<a href="contact.html" class="navlink">Contact Me</a>
 				</li>
+        <li class="navli">
+          <a href="easter.html" id="easterlink">Secret</a>
+        </li>
 			</ul>
 		</nav>
 		</div>
