--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <h1>Contact Me:</h1>
 
   <form  action="mailto:romano@hotmail.com.hk" method="post" enctype="text/plain">
-
+	<!--This div creates a Bootstrap form, so that all of the form elements can be styled appropriately-->
   <div class="form-group">
     <label for="InputEmail">Your Email</label>
     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email">
