--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 	<head>
+		<!--These lines are used to link the rest of this page to my css stylesheet, and to the bootstrap library-->
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,11 +12,12 @@
 	</head>
 
 <body>
-
+<!--This div is associated with an Id in to set up a system in CSS to keep the footer on the bottom of the screen at all times-->
 <div id="container">
-
+<!--This div is associated with an Id in to set up a system in CSS to keep the footer on the bottom of the screen at all times-->
 <div id="header">
 	<header>
+		<!--This unordered list has a lot of class associations, they are used to simply add a blue outline to the navigation bar, and ensure that all of the list elements are in line with one another-->
 		<div class="head">
 			<nav class="nav">
 			<ul class="navlist">
@@ -33,15 +35,16 @@
 		</div>
 	</header>
 </div>
-
+<!--This div is associated with an Id in to set up a system in CSS to keep the footer on the bottom of the screen at all times-->
 <div id="body">
 	<h1>Romano Agostini</h1>
 	<h2>Engineer</h2>
 	<h3>HTML, CSS, Javascript, Python, PHP, Java</h3>
+	<!--These <p> tags are associated with the "lorem" class, this forces them to have a specific margin from the left of the screen, defined in the stylesheet-->
 	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
-
+<!--This div is associated with an Id in to set up a system in CSS to keep the footer on the bottom of the screen at all times-->
 <div id="footer">
 	<footer>
 		<p class="name">Website by Romano Agostini™</p>
