--- a/about.html
+++ b/about.html
@@ -34,9 +34,11 @@
 	</header>
 
   <h1>About</h1>
+	<!--This div is associated with the class "container" so that an area for Bootstrap to be initialised in is created-->
   <div class="container">
-
+		<!--This div sets up a row along which to place Bootstrap columns-->
   	<div class="row">
+			<!--This div sets up a small column taking up 6 spaces-->
   		<div class="col-sm-6">
   			<p>I like cats, here is a picture of a cat:</p>
   			<img class="aboutimg" src="cute-cat.jpg" alt="damn that's a cute cat">
