--- a/easter.html
+++ b/easter.html
@@ -37,6 +37,7 @@
 <div id="body">
 <h1>You found the easter egg page!</h1>
 <h2>Memes Ahoy!</h1>
+<!--The "easterimg" class pushes an image, or any inline tag, into the middle of the screen-->
 <img class="easterimg" src="doot.gif" alt="Doot Doot" align="middle"><br>
 <iframe class="easterimg" width="420" height="315" src="https://www.youtube.com/embed/OJw3MmL-Omk"></iframe><br>
 </div>
