--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" title="normal">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="alternate stylesheet" href="dark.css" title="dark">
     <link rel="shortcut icon" href="favicon.ico">
 		<title>My Portfolio</title>
 	</head>
@@ -41,12 +42,12 @@
 			<!--This div sets up a small column taking up 6 spaces-->
   		<div class="col-sm-6">
   			<p>I like cats, here is a picture of a cat:</p>
-  			<img class="aboutimg" src="cute-cat.jpg" alt="damn that's a cute cat">
+  			<img class="aboutimg" src="Images/cute-cat.jpg" alt="damn that's a cute cat">
   		</div>
 
   		<div class="col-sm-6">
   			<p>I also like dogs, here is a picture of a dog:</p>
-  			<img class="aboutimg" src="pupper.jpg" alt="damn that's a cute pupper">
+  			<img class="aboutimg" src="Images/pupper.jpg" alt="damn that's a cute pupper">
   		</div>
 
   	</div>
@@ -56,7 +57,7 @@
   	<p class="name">Website by Romano Agostini™</p>
   	</body>
   </footer>
-
+<script src="Javascript/javascript.js" type="text/javascript"></script>
 </body>
 
 </html>
