--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" title="normal">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="alternate stylesheet" href="dark.css" title="dark">
     <link rel="shortcut icon" href="favicon.ico">
 		<title>My Portfolio</title>
 	</head>
@@ -37,21 +38,21 @@
 <div id="body">
   <h1>Contact Me:</h1>
 
-  <form  action="mailto:romano@hotmail.com.hk" method="post" enctype="text/plain">
+  <form  action="write.php" method="post" enctype="text/plain">
 	<!--This div creates a Bootstrap form, so that all of the form elements can be styled appropriately-->
   <div class="form-group">
     <label for="InputEmail">Your Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email">
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email" name="email">
   </div>
 
   <div class="form-group">
     <label for="InputName">Your Name</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your name">
+    <input type="username" class="form-control" id="exampleInputUsername1" placeholder="Enter your name" name="name">
   </div>
 
   <div class="form-group">
     <label for="Message">Your Message</label>
-    <textarea class="form-control" id="message" rows="3" placeholder="Your message goes here"></textarea>
+    <textarea class="form-control" id="message" rows="3" placeholder="Your message goes here" name="message"></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
@@ -65,13 +66,26 @@
 
 <div id = "footer">
   <footer>
-  	<p class="name">Website by Romano Agostini™</p>
+		<p class="name" style="padding-bottom:10px;">Website by Romano Agostini™</p>
+
+		<p class="name">Themes:</p>
+
+		<nav class="theme">
+			<ul class="themelist">
+				<li class="themeli">
+					<a class="themelink" onclick="switch_style('dark')">Dark</a>
+				</li>
+				<li class="themeli">
+					<a class="themelink" onclick="switch_style('normal')">Normal</a>
+				</li>
+			</ul>
+		</nav>
   	</body>
   </footer>
 </div>
 
 </div>
-
+<script src="Javascript/javascript.js" type="text/javascript"></script>
 </body>
 
 </html>
