--- a/easter.html
+++ b/easter.html
@@ -3,9 +3,10 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" title="normal">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="alternate stylesheet" href="dark.css" title="dark">
 		<link rel="shortcut icon" href="favicon.ico">
 		<title>Egg</title>
 	</head>
@@ -44,12 +45,25 @@
 
 <div id="footer">
 	<footer>
-		<p class="name">Website by Romano Agostini™</p>
+		<p class="name" style="padding-bottom:10px;">Website by Romano Agostini™</p>
+
+		<p class="name">Themes:</p>
+
+		<nav class="theme">
+			<ul class="themelist">
+				<li class="themeli">
+					<a class="themelink" onclick="switch_style('dark')">Dark</a>
+				</li>
+				<li class="themeli">
+					<a class="themelink" onclick="switch_style('normal')">Normal</a>
+				</li>
+			</ul>
+		</nav>
 	</footer>
 </div>
 
 </div>
-
+<script src="Javascript/javascript.js" type="text/javascript"></script>
 </body>
 
 </html>
