--- a/work.html
+++ b/work.html
@@ -3,9 +3,10 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" title="normal">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="alternate stylesheet" href="dark.css" title="dark">
     <link rel="shortcut icon" href="favicon.ico">
 		<title>My Portfolio</title>
 	</head>
@@ -37,10 +38,10 @@
 <div id="body">
 
   <h1>Work</h1>
-  <p class="lorem">I have written a great many programs perimarily in Python, but I dabble in other languages, such as Javascript, HTML, CSS, etc. I even wrote this website myself!</p>
-  <img src="source.png" class="exampleimg"><br>
+  <p class="lorem">I have written a great many programs primarily in Python, but I dabble in other languages, such as Javascript, HTML, CSS, etc. I even wrote this website myself!</p>
+  <img src="Images/source.png" class="exampleimg"><br>
   <p class="lorem">Download my CV here:</p>
-  <form method="get" action="cute-cat.jpg">
+  <form method="get" action="Images/cute-cat.jpg">
     <button style="margin-left:21%;">Download</button>
   </form>
 
@@ -55,7 +56,7 @@
 
 </div>
 </div>
-
+<script src="Javascript/javascript.js" type="text/javascript"></script>
 </body>
 
 </html>
