--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<h3>HTML, CSS, Javascript, Python, PHP, Java</h3>
 
 <!--This line assigns an image to the page and associates it with the "profile" id, where it will be given some css properties-->
-	<img src="Images/My Face Edit 1.jpg" id="profile" onclick="changeimg('profile','Images/deez.jpg');">
+	<img src="Images/My Face Edit 1.jpg" id="profile" onclick="changeimg('profile','Images/cute_cat_profile.jpg');">
 
 	<!--These <p> tags are associated with the "lorem" class, this forces them to have a specific margin from the left of the screen, defined in the stylesheet-->
 	<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
